# dispatch

./: .gitignore  README.md  env.example  pyproject.toml
.github/workflows/: briefing.yml
plugins/: _template.py  energy.py  stocks.py
src/dispatch/: __init__.py  briefing.py  default_theme.yaml
src/dispatch/plugins/: news.py  weather.py
